[gd_scene load_steps=12 format=3 uid="uid://cly0l8lus4e74"]

[ext_resource type="Texture2D" uid="uid://duuek3x316auq" path="res://Assets/bridge_background.png" id="1_bg"]
[ext_resource type="Script" uid="uid://bxf5llc3xoghu" path="res://Levels/Main Menu/scripts/Scene4_FixBridge.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ds8gg4or0e0up" path="res://Assets/EllieGesture.png" id="2_ellie"]
[ext_resource type="FontFile" uid="uid://cj477dq342a0c" path="res://Assets/Chewy-Regular.ttf" id="3_font"]
[ext_resource type="Texture2D" uid="uid://cv4oacdxpnsri" path="res://Assets/EllieBubble2.png" id="4_bubble"]
[ext_resource type="Texture2D" uid="uid://b3viiix225dtm" path="res://Assets/EllieBlocks1.png" id="5_blocks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back"]
bg_color = Color(0.8, 0.4, 0.2, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_next"]
bg_color = Color(0.2, 0.8, 0.3, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slot"]
size = Vector2(130, 50)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bridge_slot"]
bg_color = Color(0.4, 0.2, 0.1, 0.5)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plank"]
size = Vector2(120, 40)

[node name="Scene4FixItGame" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="Node2D" parent="."]

[node name="RiverBackground" type="Sprite2D" parent="Background"]
position = Vector2(578.5, 325.5)
scale = Vector2(0.745443, 0.629883)
texture = ExtResource("1_bg")

[node name="EllieInstructor" type="Sprite2D" parent="Background"]
position = Vector2(126, 411)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_ellie")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 410.0
offset_top = 37.0
offset_right = 810.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 60
text = "FIX THE BRIDGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionBubble" type="Sprite2D" parent="UI"]
position = Vector2(293, 138)
scale = Vector2(0.8, 0.6)
texture = ExtResource("4_bubble")

[node name="InstructionText" type="Label" parent="UI/InstructionBubble"]
offset_left = -170.0
offset_top = -46.6667
offset_right = 110.0
offset_bottom = 73.3333
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 20
text = "Help Ellie cross by fixing
the bridge! Listen and drag
the correct word planks!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AudioPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 466.0
offset_top = 118.0
offset_right = 666.0
offset_bottom = 278.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_back")

[node name="AudioLabel" type="Label" parent="UI/AudioPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 20
text = "üîä Listen"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="UI/AudioPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -25.0
offset_right = 40.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 36
text = "‚ñ∂Ô∏è"

[node name="CurrentWordLabel" type="Label" parent="UI/AudioPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 30.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 18
text = "Click Play!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/AudioPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 55.0
offset_right = 50.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 16
text = "Score: 0"
horizontal_alignment = 1

[node name="NavButtons" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 590.0
offset_right = 800.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="UI/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_back")
text = "‚Üê Back"

[node name="Spacer" type="Control" parent="UI/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="UI/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_next")
disabled = true
text = "Next ‚Üí"

[node name="BridgeArea" type="Node2D" parent="."]
position = Vector2(200, 400)

[node name="LeftBank" type="ColorRect" parent="BridgeArea"]
visible = false
offset_left = -200.0
offset_top = 50.0
offset_bottom = 150.0
color = Color(0.4, 0.6, 0.2, 1)

[node name="RightBank" type="ColorRect" parent="BridgeArea"]
visible = false
offset_left = 600.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 150.0
color = Color(0.4, 0.6, 0.2, 1)

[node name="River" type="ColorRect" parent="BridgeArea"]
visible = false
offset_top = 100.0
offset_right = 600.0
offset_bottom = 200.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="BridgeBase" type="ColorRect" parent="BridgeArea"]
offset_left = -38.0
offset_top = 161.0
offset_right = 562.0
offset_bottom = 181.0
color = Color(0.5, 0.3, 0.1, 1)

[node name="BridgeSlots" type="Node2D" parent="BridgeArea"]
position = Vector2(-50, 50)

[node name="BridgeSlot1" type="Area2D" parent="BridgeArea/BridgeSlots"]
position = Vector2(100, 75)

[node name="SlotCollision1" type="CollisionShape2D" parent="BridgeArea/BridgeSlots/BridgeSlot1"]
shape = SubResource("RectangleShape2D_slot")

[node name="SlotPanel1" type="Panel" parent="BridgeArea/BridgeSlots/BridgeSlot1"]
offset_left = -65.0
offset_top = -25.0
offset_right = 65.0
offset_bottom = 25.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bridge_slot")

[node name="SlotLabel1" type="Label" parent="BridgeArea/BridgeSlots/BridgeSlot1"]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
theme_override_fonts/font = ExtResource("3_font")
text = "MISSING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BridgeSlot2" type="Area2D" parent="BridgeArea/BridgeSlots"]
position = Vector2(300, 75)

[node name="SlotCollision2" type="CollisionShape2D" parent="BridgeArea/BridgeSlots/BridgeSlot2"]
shape = SubResource("RectangleShape2D_slot")

[node name="SlotPanel2" type="Panel" parent="BridgeArea/BridgeSlots/BridgeSlot2"]
offset_left = -65.0
offset_top = -25.0
offset_right = 65.0
offset_bottom = 25.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bridge_slot")

[node name="SlotLabel2" type="Label" parent="BridgeArea/BridgeSlots/BridgeSlot2"]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
theme_override_fonts/font = ExtResource("3_font")
text = "MISSING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BridgeSlot3" type="Area2D" parent="BridgeArea/BridgeSlots"]
position = Vector2(500, 75)

[node name="SlotCollision3" type="CollisionShape2D" parent="BridgeArea/BridgeSlots/BridgeSlot3"]
shape = SubResource("RectangleShape2D_slot")

[node name="SlotPanel3" type="Panel" parent="BridgeArea/BridgeSlots/BridgeSlot3"]
offset_left = -65.0
offset_top = -25.0
offset_right = 65.0
offset_bottom = 25.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bridge_slot")

[node name="SlotLabel3" type="Label" parent="BridgeArea/BridgeSlots/BridgeSlot3"]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
theme_override_fonts/font = ExtResource("3_font")
text = "MISSING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlacedPlanks" type="Node2D" parent="BridgeArea"]

[node name="WordPlanksArea" type="Node2D" parent="."]
position = Vector2(900, 250)

[node name="WordPlank1" type="Area2D" parent="WordPlanksArea"]

[node name="PlankSprite1" type="Sprite2D" parent="WordPlanksArea/WordPlank1"]
scale = Vector2(0.45, 0.4)
texture = ExtResource("5_blocks")

[node name="PlankCollision1" type="CollisionShape2D" parent="WordPlanksArea/WordPlank1"]
shape = SubResource("RectangleShape2D_plank")

[node name="PlankLabel1" type="Label" parent="WordPlanksArea/WordPlank1"]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "word1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordPlank2" type="Area2D" parent="WordPlanksArea"]
position = Vector2(0, 90)

[node name="PlankSprite2" type="Sprite2D" parent="WordPlanksArea/WordPlank2"]
scale = Vector2(0.45, 0.4)
texture = ExtResource("5_blocks")

[node name="PlankCollision2" type="CollisionShape2D" parent="WordPlanksArea/WordPlank2"]
shape = SubResource("RectangleShape2D_plank")

[node name="PlankLabel2" type="Label" parent="WordPlanksArea/WordPlank2"]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "word2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordPlank3" type="Area2D" parent="WordPlanksArea"]
position = Vector2(0, 180)

[node name="PlankSprite3" type="Sprite2D" parent="WordPlanksArea/WordPlank3"]
scale = Vector2(0.45, 0.4)
texture = ExtResource("5_blocks")

[node name="PlankCollision3" type="CollisionShape2D" parent="WordPlanksArea/WordPlank3"]
shape = SubResource("RectangleShape2D_plank")

[node name="PlankLabel3" type="Label" parent="WordPlanksArea/WordPlank3"]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "word3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" type="Node2D" parent="."]

[node name="CorrectSound" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0

[node name="WrongSound" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0

[node name="WordAudio" type="AudioStreamPlayer" parent="Audio"]
volume_db = -3.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
volume_db = -15.0

[node name="BridgeCompleteSound" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0
